# iikocloud-bot

./: .env.example  .env.new  .gitignore  .pre-commit-config.yaml  .secrets.toml  CHANGELOG  alembic.ini  config.py  data.db  database.db  generate-doc.sh  main.py  pyproject.toml  readme.md  requirements.txt  settings.toml
api/: iiko.py
api/iIkoCloud/: __init__.py  iIkoCloud.py
api/iikocloud/: __init__.py  enums.py  exceptions.py  iIkoCloud.py  models.py
api/sms_center/: __init__.py  main.py
bot/: loader.py  main.py
bot/callbacks/: RateCallbackData.py
bot/config/: config.py  load_config.py
bot/database/: __init__.py  connect.py  database.py
bot/database/methods/: orders.py  other.py  sender.py  user.py  user_exists.py
bot/database/models/: Review.py  Sender.py  User.py  __init__.py
bot/fitlers/: CheckDateFilter.py  IsAdmin.py  IsAuth.py  IsPhoneNumber.py  IsWork.py  PhoneNumberFilter.py  __init__.py  main.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py  base_admin_handlers.py
bot/handlers/user/: __init__.py  base_handlers.py  cabinet_handlers.py  login_handlers.py  main.py  other_handlers.py  registration_handlers.py
bot/keyboards/: __init__.py  cabinet.py  inline.py  pagination_kb.py  reply.py
bot/keyboards/admin/: inline_admin.py  reply_admin.py
bot/locales/: messages.pot
bot/mics/: __init__.py  changelog.py  commands.py  const_functions.py  iikoapi.py  iikoserverapi.py  notify.py  notify_admin.py  sender.py  utils.py
bot/mics/helpers/: Config.py
bot/middlewares/: DbSessionMiddleware.py  SchedulerMiddleware.py  ThrottlingMiddleware.py  __init__.py  database.py  language.py
bot/states/admin/: BroadcastStates.py
bot/states/user/: FeedbackStates.py  LoginStates.py  RegistrationStates.py  __init__.py  (+1 more)
config/: configuration.py
migrations/: env.py
migrations/versions/: 086c342d9a41_update_review_model.py  0bcec92a5d42_add_autoincrement_review.py  30fb493e6cd0_update_user_model.py  63c093fd439a_add_review_model.py  b04df80255fc_add_users_field_is_blocked.py
schedulers/: __init__.py  sc_backup_db.py  sc_check_order.py
services/iikocloud/: enums.py  iIkoCloud.py  models.py
services/iikoserver/: IikoServer.py  exceptions.py
services/sms_center/: main.py
utils/: __init__.py  backup.py  logger.py  main.py
(+2 files in other folders)
