[tool.poetry]
name = "dohepcbot"
version = "0.1.0"
description = ""
authors = ["xiliken <glavzaim.dii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiocron = "1.8"
aiofiles = "23.1.0"
aiogram = "3.0.0rc2"
aiogram-i18n = "1.3"
aiohttp = "3.8.5"
aioredis = "2.0.1"
aiosignal = "1.3.1"
aiosqlite = "0.19.0"
alabaster = "0.7.13"
alembic = "1.12.0"
annotated-types = "0.5.0"
apscheduler-di = "0.1.0"
async-timeout = "4.0.3"
attrs = "23.1.0"
autoflake = "2.2.1"
babel = "2.12.1"
build = "1.0.3"
cachetools = "5.3.1"
certifi = "2023.7.22"
cfgv = "3.4.0"
charset-normalizer = "3.2.0"
click = "8.1.7"
colorama = "0.4.6"
commonmark = "0.9.1"
croniter = "1.4.1"
detect-secrets = "1.4.0"
distlib = "0.3.7"
docutils = "0.19"
dynaconf = "3.2.3"
environs = "9.5.0"
filelock = "3.12.4"
frozenlist = "1.4.0"
gitverse = "2.5"
greenlet = "3.0.0rc2"
identify = "2.5.29"
idna = "3.4"
imagesize = "1.4.1"
isort = "5.12.0"
jinja2 = "3.1.2"
loguru = "0.7.2"
magic-filter = "1.0.11"
mako = "1.2.4"
markupsafe = "2.1.3"
marshmallow = "3.20.1"
multidict = "6.0.4"
nodeenv = "1.8.0"
packaging = "23.1"
path = "16.7.1"
pillow = "10.0.0"
pip-tools = "7.3.0"
platformdirs = "3.10.0"
pre-commit = "2.20.0"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
pyflakes = "3.1.0"
pygments = "2.16.1"
pyiikocloudapi = "0.0.12"
pypng = "0.20220715.0"
pyproject-hooks = "1.0.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
pyzbar = "0.1.9"
qrcode = "7.4.2"
recommonmark = "0.7.1"
redis = "5.0.0"
requests = "2.31.0"
rodi = "2.0.3"
ruamel-yaml = "0.17.32"
ruamel-yaml-clib = "0.2.7"
six = "1.16.0"
snowballstemmer = "2.2.0"
sphinx = "5.1.1"
sphinxcontrib-applehelp = "1.0.7"
sphinxcontrib-devhelp = "1.0.5"
sphinxcontrib-htmlhelp = "2.0.4"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.6"
sphinxcontrib-serializinghtml = "1.1.9"
sqlalchemy = "2.0.20"
sqlalchemy2-stubs = "0.0.2a35"
toml = "0.10.2"
tqdm = "4.66.1"
typing-extensions = "4.7.1"
tzdata = "2023.3"
tzlocal = "5.0.1"
urllib3 = "2.0.4"
virtualenv = "20.24.5"
win32-setctime = "1.1.0"
yarl = "1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
